<resources>
    <string name="app_name">Pra Assessment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="_6706180110">6706180110</string>
    <string name="nur_wakhidah_fitri_amalia">Nur Wakhidah Fitri Amalia</string>
    <string name="d3if_42_02">D3IF-42-02</string>
    <string name="persegi_panjang">persegi panjang</string>
    <string name="segitiga">segitiga</string>
    <string name="masukkan_panjang">Masukkan Panjang</string>
    <string name="masukkan_lebar">Masukkan Lebar</string>
    <string name="hitung">hitung</string>
    <string name="luas_persegi_panjang">Luas Persegi Panjang:</string>
    <string name="keliling_persegi_panjang">Keliling Persegi Panjang:</string>
    <string name="share">share</string>
    <string name="masukkan_alas">Masukkan Alas</string>
    <string name="masukkan_tinggi">Masukkan Tinggi</string>
    <string name="luas_segitiga">Luas Segitiga:</string>
    <string name="keliling_segitiga">Keliling Segitiga:</string>
</resources>
