<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".AboutFragment">
        <TextView
                android:text="@string/_6706180110"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_nim"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="200dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintHorizontal_bias="0.498"/>
        <TextView
                android:text="@string/nur_wakhidah_fitri_amalia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_nama" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_nim" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <TextView
                android:text="@string/d3if_42_02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_kelas" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_nama" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>